--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,9 +1,12 @@
 APScheduler==3.10.4
 blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.3.1
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.3.0
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
@@ -12,9 +15,11 @@ plotly==5.18.0
 python-dateutil==2.8.2
 pytz==2025.2
 rapidfuzz==3.5.2
+requests==2.32.5
 six==1.17.0
 SQLAlchemy==2.0.45
 tenacity==9.1.2
 typing_extensions==4.15.0
 tzlocal==5.3.1
+urllib3==2.6.3
 Werkzeug==3.0.1
