--- a/scripts/voice-assistant.service
+++ b/scripts/voice-assistant.service
@@ -1,19 +1,30 @@
 [Unit]
 Description=Health Dashboard Voice Assistant
-After=network.target sound.target
+After=network.target sound.target health-dashboard.service
+Wants=health-dashboard.service
 
 [Service]
 Type=simple
 User=pi2
+Group=pi2
 WorkingDirectory=/home/pi2/health-dashboard
 ExecStart=/home/pi2/health-dashboard/venv/bin/python -m voice.main
 Restart=always
 RestartSec=5
+
+# Environment
 Environment=PYTHONUNBUFFERED=1
 Environment=HEALTH_API_URL=http://localhost:5000
+Environment=STT_ENGINE=moonshine
+Environment=HF_HUB_OFFLINE=1
 
 # Audio access
 SupplementaryGroups=audio
+
+# Logging
+StandardOutput=journal
+StandardError=journal
+SyslogIdentifier=voice-assistant
 
 [Install]
 WantedBy=multi-user.target
